# qwen

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  LICENSE  README.md  Useful commands for Qwen project.txt  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/ui/: button.tsx  card.tsx
frontend/lib/: api.ts
frontend/pages/: index.tsx  memories.tsx
frontend/styles/: globals.css
monitoring/: otel-collector-config.yml  prometheus.yml
monitoring/grafana/dashboards/: memos-q.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/memos_q/: __init__.py  api.py  config.py  daily_summary.py  engine.py  models.py  scoring.py  store.py  telegram.py
src/memos_q/agentic/: graph.py  llm.py  memory.py  notification.py  planner.py  prompts.py  reflection.py  router.py  safety.py  state.py  tools.py
src/memos_q/integrations/: durable.py  factory.py  qwen_cloud.py
src/memos_q/monitoring/: agent_metrics.py  memory_metrics.py  observability.py
src/memos_q/workers/: celery_app.py
tests/: test_agentic_api.py  test_agentic_graph.py  test_agentic_memory.py  test_agentic_notification.py  test_agentic_tools.py  test_api.py  test_daily_summary.py  test_memory_os.py  test_qwen_embeddings.py
