[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memos-q"
version = "0.1.0"
description = "A self-evolving memory operating system prototype for AI agents built for QwenCloud workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MemOS-Q Contributors" }]
license = { text = "MIT" }
keywords = ["ai", "agents", "memory", "qwen", "mcp"]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn>=0.30"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
