[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memos-q"
version = "0.1.0"
description = "A self-evolving memory operating system prototype for AI agents built for QwenCloud workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MemOS-Q Contributors" }]
license = { text = "MIT" }
keywords = ["ai", "agents", "memory", "qwen", "mcp"]
dependencies = ["requests>=2.32"]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "prometheus-fastapi-instrumentator>=7.0",
]
live = [
    "boto3>=1.35",
    "celery>=5.4",
    "psycopg[binary]>=3.2",
    "qwen-agent>=0.0.26",
    "redis>=5.2",
]
monitoring = [
    "langfuse>=2.56",
    "opentelemetry-api>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-sdk>=1.29",
]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
